--- a/main/chap2_kernels.tex
+++ b/main/chap2_kernels.tex
@@ -829,21 +829,34 @@ where $c_A$ and $c_B$ denote respectively the concentrations of cyclopentadiene 
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[scale=0.4]{../images/chap2_numex_ex3_time_subopt.pdf} \hspace{5pt}
-	\includegraphics[scale=0.4]{../images/chap2_numex_ex3_time_opt.pdf}
-	\caption{The ground-truth (black) and the upper optimal bound C$(x)$ (blue) with $100$ data-points. Two noise levels are considered, $\bar\delta = 1$ and $\bar\delta = 5$, and two sampling strategies, an equidistant grid and random uniform sampling.}
-	%\label{fig:gridrandcomp}
-	\vspace{15pt}
 	\includegraphics[scale=0.4]{../images/chap2_numex_ex3_phase_subopt.pdf} \hspace{5pt}
 	\includegraphics[scale=0.4]{../images/chap2_numex_ex3_phase_opt.pdf} 
 	\caption{A comparison between the optimal bounds (blue) and the closed-form sub-optimal ones (green). The 2D ground-truth was sliced at $z_1 = -3$ and is shown in dashed black.}
+	\label{fig:ex3_phase}
+	\vspace{15pt}
+	\includegraphics[scale=0.4]{../images/chap2_numex_ex3_time_subopt.pdf} \hspace{5pt}
+	\includegraphics[scale=0.4]{../images/chap2_numex_ex3_time_opt.pdf}
+	\caption{The ground-truth (black) and the upper optimal bound C$(x)$ (blue) with $100$ data-points. Two noise levels are considered, $\bar\delta = 1$ and $\bar\delta = 5$, and two sampling strategies, an equidistant grid and random uniform sampling.}
+	\label{fig:ex3_time}
 \end{figure}
 
-To verify if OCP control actions would not lead to the true system violating constraints, we employed our kernelized UQ technique. First, the problem was broken down into several steps: the 1-step ahead analysis, the 2-step ahead analysis, and so on. The datasets associated with each step are composed of initial states and sequences of control actions to form $x_i$, and the final state to form $y_i$ (this multi-step approach is the same as the one explained in Section~\ref{sec.kpc}). The squared-exponential kernel was used throughout the whole process and the various lengthscales were selected through a 5-fold cross-validation process based on 400 samples (see Section~\ref{sec.appendix_hyerparams}). The same batch of data were exploited to estimate the different RKHS norms $\Gamma$ following the procedure of Section~\ref{sec.appendix_estimating_rkhs_norms}. The obtained lower estimates were then augmented to account for possible unseen complexity. Distinct datasets were gathered to compute the bounds by starting the system at $800$ initial conditions and solving OCP from those locations. We highlight that, as there are two states and one control variable, the domain of the ground-truth mapping the initial condition to the 8-th step ahead state has dimension 10, hence justifying the need for a large dataset. The noise affecting the measurements was drawn uniformly from the interval $-0.05$ to $0.05$, and a bound of $\bar \delta = 0.06$ was used.
+To verify if computed OCP control actions would not lead to the system violating constraints, we employed our kernelized UQ technique. First, the problem was broken down into several steps: the 1-step ahead analysis, the 2-step ahead analysis, and so on. The datasets associated with each step are composed of initial states and sequences of control actions to form $x_i$, and the final state to form $y_i$ (this multi-step approach is the same as the one explained in Section~\ref{sec.kpc}). The squared-exponential kernel was used throughout the whole process and the various lengthscales were selected through a 5-fold cross-validation process based on 400 samples (see Section~\ref{sec.appendix_hyerparams}). The same batch of data were exploited to estimate the different RKHS norms $\Gamma$ following the procedure of Section~\ref{sec.appendix_estimating_rkhs_norms}. The obtained lower estimates were then augmented to account for possible unseen complexity. Distinct datasets were gathered to compute the bounds by starting the system at $800$ initial conditions and solving OCP from those locations. We highlight that, as there are two states and one control variable, the domain of the function mapping the initial condition to the 8-th step ahead state has dimension 10, hence justifying the need for a large dataset. The noise affecting the measurements was drawn uniformly from the interval $-0.05$ to $0.05$, and a bound of $\bar \delta = 0.06$ was used.
 
-The two types of bounds were then computed defining an interval per state and, thus, a ``bounding box'' for each step. These are then guaranteed to contain the true system evolution, the ground-truth, as illustrated in Figure~\ref{fig:cstr_phase}. 
-In addition to it, one bounding box around the trajectory that starts at the bottom right corner of the plots extends below the $c_B \geq 0.5$ constraint. A time-domain view of the situation is shown in Figure~\ref{fig:cstr_time}, where at time-step $1$ the lower-bound violates the aforementioned constraint in the top plot, but not in the bottom one. As a result, the OCP control sequence could not be certified by the sub-optimal approach, but could by means of the optimal one.
+The optimal bounds \eqref{eq.P1case1} and the sub-optimal ones \eqref{eq.uniformBound2} were employed to define robust confidence sets for each time-step. These are guaranteed to contain the true system evolution, the ground-truth, as illustrated by the phase portrait and the bounding boxes in Figure~\ref{fig:ex3_phase}. Based solely on the sub-optimal approach, one would certify three out of four control sequences as the one confidence set in the lower right portion of the space extends beyond the state constraints. Nevertheless, by using the optimal bounds we can conclude that no violation would occur as all confidence sets are completely within the feasible region. A time-domain view of that particular trajectory is shown in Figure~\ref{fig:ex3_time}. It is important to underline that both approaches are based exactly on the same information (datasets, noise bounds and RKHS norm bounds), and only differ in the way they are computed.
 
+\textbf{Example 4:} The continuous-time angular dynamics of a pendulum with a rigid rod can be described by $\dot x_1 = x_2$, $\dot x_2 = (g/l)\sin(x_1) - (\nu/(ml^2)) x_2 + (1/(m l^2)) u$, where $x_1$ is its angular position, $x_2$ its angular velocity, and $u$ the torque applied to it. The parameters are: $m = 0.15$ the mass of the pendulum, $l = 0.5$ the length of the rod, $g = 9.81$ the gravitational constant, and $\nu = 0.1$ a constant for the friction model. Let the constraints be $\vert x_1 \vert \leq 3$, $\vert x_2 \vert \leq 1$, and the input be limited to $\vert u \vert \leq 1$. We selected a prediction horizon of $N=4$ and collected $D=100$ uniformly random data-points for each of the eight regression tasks. The noise was drawn randomly from a uniform distribution with bound $\bar \delta = 0.01 \, \textbf{1}$, where $\textbf{1} \in \mathbb{R}^D$ is a vector of ones. Similarly to the previous example, we used a squared-exponential kernel with increasing lengthscales and employed an augmentation factor of $300\%$ on the nominal predictor norms to estimate the $\Gamma$ constants. The sampling and control period was $0.2$~seconds. We compared KPC against \textit{nominal} kernel-MPC, i.e., a certainty equivalence approach where the state-constraints were imposed directly on the nominal predictions \eqref{eq.KPCnominal}. In the latter case, uncertainty was not quantified and the confidence sets were not present. The cost used in both formulations was a positive definite function of the states and control inputs, and included a terminal penalty term. 
+
+Predictions and the system angular velocity evolution from two different initial conditions are shown in Figure~\ref{fig.PENDULUM}. As can be seen from the plots, imposing the state-constraints on the nominal model predictions was not sufficient to guarantee safety as the closed-loop system behavior violated the $x_2 \geq -1$ restriction. On the other hand, since KPC quantified and incorporated the associated uncertainty into the optimization problems, the constraints were satisfied. The error bars on the right plot show the all predictions and uncertainty values at each step in the form of error bars. Note that the safety constraints were active at multiple points in time. 
+
+\begin{figure}[t]
+	\centering
+	\includegraphics[scale=0.25]{../images/chap2_numex_ex4_A.pdf}
+	\includegraphics[scale=0.25]{../images/chap2_numex_ex4_B.pdf}
+	\includegraphics[scale=0.25]{../images/chap2_numex_ex4_C.pdf}
+	\caption{A comparison between the optimal bounds (blue) and the closed-form sub-optimal ones (green). The 2D ground-truth was sliced at $z_1 = -3$ and is shown in dashed black.}
+	%\label{fig:ex3_time}
+\end{figure}
+	
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
 % Appendices
