--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -363,9 +363,255 @@
 	publisher={Elsevier}
 }
 
+@book{williams2006gaussian,
+	title={{Gaussian Processes For Machine Learning}},
+	author={Williams, Christopher KI and Rasmussen, Carl Edward},
+	volume={2},
+	number={3},
+	year={2006},
+	publisher={MIT press Cambridge, MA}
+}
+
+@book{gramacy2020surrogates,
+	title={Surrogates: Gaussian process modeling, design, and optimization for the applied sciences},
+	author={Gramacy, Robert B},
+	year={2020},
+	publisher={Chapman and Hall/CRC}
+}
+
+@article{bauer2016understanding,
+	title={Understanding probabilistic sparse Gaussian process approximations},
+	author={Bauer, Matthias and van der Wilk, Mark and Rasmussen, Carl Edward},
+	journal={Advances in neural information processing systems},
+	volume={29},
+	year={2016}
+}
+
+@inproceedings{snelson2007local,
+	title={Local and global sparse Gaussian process approximations},
+	author={Snelson, Edward and Ghahramani, Zoubin},
+	booktitle={Artificial Intelligence and Statistics},
+	pages={524--531},
+	year={2007},
+	organization={PMLR}
+}
+
+@article{quinonero2005unifying,
+	title={A unifying view of sparse approximate Gaussian process regression},
+	author={Quinonero-Candela, Joaquin and Rasmussen, Carl Edward},
+	journal={The Journal of Machine Learning Research},
+	volume={6},
+	pages={1939--1959},
+	year={2005},
+	publisher={JMLR. org}
+}
+
+@article{csato2002sparse,
+	title={Sparse on-line Gaussian processes},
+	author={Csat{\'o}, Lehel and Opper, Manfred},
+	journal={Neural computation},
+	volume={14},
+	number={3},
+	pages={641--668},
+	year={2002},
+	publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
+
+@article{yang2012nystrom,
+	title={Nystr{\"o}m method vs random fourier features: A theoretical and empirical comparison},
+	author={Yang, Tianbao and Li, Yu-Feng and Mahdavi, Mehrdad and Jin, Rong and Zhou, Zhi-Hua},
+	journal={Advances in neural information processing systems},
+	volume={25},
+	year={2012}
+}
 
 
+@article{bui2017unifying,
+	title={A unifying framework for Gaussian process pseudo-point approximations using power expectation propagation},
+	author={Bui, Thang D and Yan, Josiah and Turner, Richard E},
+	journal={The Journal of Machine Learning Research},
+	volume={18},
+	number={1},
+	pages={3649--3720},
+	year={2017},
+	publisher={JMLR. org}
+}
 
+@article{maddox2021conditioning,
+	title={Conditioning Sparse Variational Gaussian Processes for Online Decision-making},
+	author={Maddox, Wesley J and Stanton, Samuel and Wilson, Andrew G},
+	journal={Advances in Neural Information Processing Systems},
+	volume={34},
+	pages={6365--6379},
+	year={2021}
+}
+
+@article{bui2017streaming,
+	title={Streaming sparse Gaussian process approximations},
+	author={Bui, Thang D and Nguyen, Cuong and Turner, Richard E},
+	journal={Advances in Neural Information Processing Systems},
+	volume={30},
+	year={2017}
+}
+
+@inproceedings{lederer2021gaussian,
+	title={Gaussian process-based real-time learning for safety critical applications},
+	author={Lederer, Armin and Conejo, Alejandro J Ord{\'o}{\~n}ez and Maier, Korbinian A and Xiao, Wenxin and Umlauft, Jonas and Hirche, Sandra},
+	booktitle={International Conference on Machine Learning},
+	pages={6055--6064},
+	year={2021},
+	organization={PMLR}
+}
+
+@article{ferrari1998finite,
+	title={Finite-dimensional approximation of Gaussian processes},
+	author={Ferrari-Trecate, Giancarlo and Williams, Christopher and Opper, Manfred},
+	journal={Advances in neural information processing systems},
+	volume={11},
+	year={1998}
+}
+
+@inproceedings{kocijan2004gaussian,
+	title={Gaussian process model based predictive control},
+	author={Kocijan, Ju{\v{s}} and Murray-Smith, Roderick and Rasmussen, Carl Edward and Girard, Agathe},
+	booktitle={Proceedings of the 2004 American control conference},
+	volume={3},
+	pages={2214--2219},
+	year={2004},
+	organization={IEEE}
+}
+
+@inproceedings{hansen2005nonparametric,
+	title={Nonparametric Identification of linearizations and uncertainty using Gaussian process models-application to robust wheel slip control},
+	author={Hansen, Jostein and Murray-Smith, Roderick and Johansen, Tor Arne},
+	booktitle={Proceedings of the 44th IEEE Conference on Decision and Control},
+	pages={5083--5088},
+	year={2005},
+	organization={IEEE}
+}
+
+@inproceedings{kocijan2003predictive,
+	title={Predictive control with Gaussian process models},
+	author={Kocijan, Ju{\v{s}} and Murray-Smith, Roderick and Rasmussen, Carl Edward and Likar, Bojan},
+	booktitle={The IEEE Region 8 EUROCON 2003. Computer as a Tool.},
+	volume={1},
+	pages={352--356},
+	year={2003},
+	organization={IEEE}
+}
+
+@article{liu2018gaussian,
+	title={Gaussian processes for learning and control: A tutorial with examples},
+	author={Liu, Miao and Chowdhary, Girish and Da Silva, Bruno Castra and Liu, Shih-Yuan and How, Jonathan P},
+	journal={IEEE Control Systems Magazine},
+	volume={38},
+	number={5},
+	pages={53--86},
+	year={2018},
+	publisher={IEEE}
+}
+
+@inproceedings{diwale2014optimization,
+	title={Optimization of an airborne wind energy system using constrained gaussian processes},
+	author={Diwale, Sanket Sanjay and Lymperopoulos, Ioannis and Jones, Colin N},
+	booktitle={2014 IEEE Conference on Control Applications (CCA)},
+	pages={1394--1399},
+	year={2014},
+	organization={IEEE}
+}
+
+@article{khosravi2022safety,
+	title={Safety-aware cascade controller tuning using constrained Bayesian optimization},
+	author={Khosravi, Mohammad and Koenig, Christopher and Maier, Markus and Smith, Roy S and Lygeros, John and Rupenyan, Alisa},
+	journal={IEEE Transactions on Industrial Electronics},
+	year={2022},
+	publisher={IEEE}
+}
+
+@article{hewing2019cautious,
+	title={Cautious model predictive control using gaussian process regression},
+	author={Hewing, Lukas and Kabzan, Juraj and Zeilinger, Melanie N},
+	journal={IEEE Transactions on Control Systems Technology},
+	volume={28},
+	number={6},
+	pages={2736--2743},
+	year={2019},
+	publisher={IEEE}
+}
+
+@article{lederer2022cooperative,
+	title={Cooperative Control of Uncertain Multi-Agent Systems via Distributed Gaussian Processes},
+	author={Lederer, Armin and Yang, Zewen and Jiao, Junjie and Hirche, Sandra},
+	journal={IEEE Transactions on Automatic Control},
+	year={2022},
+	publisher={IEEE}
+}
+
+@article{goldberg1997regression,
+	title={Regression with input-dependent noise: A Gaussian process treatment},
+	author={Goldberg, Paul and Williams, Christopher and Bishop, Christopher},
+	journal={Advances in neural information processing systems},
+	volume={10},
+	year={1997}
+}
+
+@article{binois2018practical,
+	title={Practical heteroscedastic gaussian process modeling for large simulation experiments},
+	author={Binois, Mickael and Gramacy, Robert B and Ludkovski, Mike},
+	journal={Journal of Computational and Graphical Statistics},
+	volume={27},
+	number={4},
+	pages={808--821},
+	year={2018},
+	publisher={Taylor \& Francis}
+}
+
+@article{matthews2017gpflow,
+	title={GPflow: A Gaussian Process Library using TensorFlow.},
+	author={Matthews, Alexander G de G and Van Der Wilk, Mark and Nickson, Tom and Fujii, Keisuke and Boukouvalas, Alexis and Le{\'o}n-Villagr{\'a}, Pablo and Ghahramani, Zoubin and Hensman, James},
+	journal={J. Mach. Learn. Res.},
+	volume={18},
+	number={40},
+	pages={1--6},
+	year={2017}
+}
+
+@inproceedings{turner2010state,
+	title={State-space inference and learning with Gaussian processes},
+	author={Turner, Ryan and Deisenroth, Marc and Rasmussen, Carl},
+	booktitle={Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
+	pages={868--875},
+	year={2010},
+	organization={JMLR Workshop and Conference Proceedings}
+}
+
+@article{eleftheriadis2017identification,
+	title={Identification of Gaussian process state space models},
+	author={Eleftheriadis, Stefanos and Nicholson, Tom and Deisenroth, Marc and Hensman, James},
+	journal={Advances in neural information processing systems},
+	volume={30},
+	year={2017}
+}
+
+@article{berntorp2021online,
+	title={Online Bayesian inference and learning of Gaussian-process state--space models},
+	author={Berntorp, Karl},
+	journal={Automatica},
+	volume={129},
+	pages={109613},
+	year={2021},
+	publisher={Elsevier}
+}
+
+
+@inproceedings{beckers2016stability,
+	title={Stability of Gaussian process state space models},
+	author={Beckers, Thomas and Hirche, Sandra},
+	booktitle={2016 European Control Conference (ECC)},
+	pages={2275--2281},
+	year={2016},
+	organization={IEEE}
+}
 
 
 
